--- a/my-web-page/src/index.css
+++ b/my-web-page/src/index.css
@@ -6,6 +6,31 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+/* Light Theme */
+.light {
+  background-color: white;
+  color: black;
+}
+
+/* Light Theme */
+.light {
+  background-color: white;
+  color: black;
+}
+
+/* Dark Theme */
+.dark {
+  background-color: black;
+  color: white;
+}
+
+/* Basic styling for the app */
+button {
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
